FRONTEND: Huge fixes on mobile profile, location sidebar redesign, api fetch friends events events info map sidebar connection, minor changes

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -115,6 +115,7 @@
 @layer base {
   * {
     @apply border-border outline-ring/50;
+    font-family: Manrope;
   }
   body {
     @apply bg-background text-foreground;
@@ -128,5 +129,11 @@
   /* Firefox */
   input[type="number"] {
     -moz-appearance: textfield;
+  }
+}
+
+@layer base {
+  button, [role="button"] {
+    cursor: pointer;
   }
 }
